syntax = "proto3";

package user;
option go_package = "./user";

message Empty {}

message RequestUserRegistration {
  string username = 1;
  string password = 2;
  string email = 3;
}

message UserResponse {
  string id = 1;
  string token = 2;
}

message RequestUserLogin {
  string email = 1;
  string password = 2;
}

service UserService {
  rpc UserLogin(RequestUserLogin) returns (UserResponse);
  rpc UserRegistration(RequestUserRegistration) returns (UserResponse);
}